added some ignore files

--- a/.gitignore
+++ b/.gitignore
@@ -7,4 +7,6 @@ test_data/I-results-I.txt
 test_data/I-results-IM.txt
 test_data/IM-results-I.txt
 test_data/IM-results-IM.txt
+test_data/posterior*
+test_data/marginal*
 *~
